sample-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp
spec:
  selector:
    matchLabels:
      app: sampleapp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sampleapp
    spec:
      containers:
      - image: gbolo/sample-app:1.2
        name:  sampleapp
        ports:
          - containerPort: 60061
            name: sampleapp
