sample-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sampleapp
spec:
  type: NodePort
  selector:
    app: sampleapp
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 60061
